added miniconda instructions

--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -220,7 +220,20 @@ cp -RPp .env.example .env
 # Building Frontend Using Node
 npm install
 npm run build
+```
 
+Install miniconda 
+
+```sh
+# macOS
+brew install --cask miniconda
+```
+
+For Linux see this [link](https://docs.conda.io/projects/conda/en/latest/user-guide/install/linux.html)
+
+After installing miniconda, you can access the `backend` folder
+
+```sh
 cd ./backend
 
 # Optional: To install using Conda as your development environment, follow these instructions:
