--- a/docs/tutorial-development/index.mdx
+++ b/docs/tutorial-development/index.mdx
@@ -26,7 +26,20 @@ cp -RPp .env.example .env
 # Start frontend server
 npm install
 npm run dev
+```
 
+Install miniconda 
+
+```sh
+# macOS
+brew install --cask miniconda
+```
+
+For Linux see this [link](https://docs.conda.io/projects/conda/en/latest/user-guide/install/linux.html)
+
+After installing miniconda, you can access the `backend` folder
+
+```sh
 cd ./backend
 
 # Optional: To install using Conda as your development environment, follow these instructions:
