--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -222,7 +222,7 @@ npm install
 npm run build
 ```
 
-Install miniconda 
+Install [miniconda](https://docs.anaconda.com/miniconda/) 
 
 ```sh
 # macOS
