docs: mention ways to bypass HTTPS restrictions on chromium + untested ways on firefox

--- a/docs/troubleshooting/index.mdx
+++ b/docs/troubleshooting/index.mdx
@@ -31,6 +31,13 @@ If you're using Podman on MacOS, to reach Ollama running on your computer you mu
 podman run -d --network slirp4netns:allow_host_loopback=true -p 3000:8080 -e OLLAMA_BASE_URL=http://host.containers.internal:11434 -v open-webui:/app/backend/data --name open-webui --restart always ghcr.io/open-webui/open-webui:main
 ```
 
+## Microphone access and other permission issues with non-HTTPS connections
+Chromium-based (Chrome, Brave, MS Edge, Opera, Vivaldi,  ...) and firefox-based browsers often restrict site-level permissions on non-HTTPS URLs. This is most obvious when running an instance on your local network and reaching it from another device (example: a phone) of the same network: the microphone permission will most likely get denied right away without a clear way to whitelist the URL. Solutions for this include manually setting up HTTPS or adding an exception to the URL to flag it at secure. Use this at your own risk and we strongly recommend thinking carefully about the security implications before jumping into this.
+
+- To flag a URL as secure on chromium based browsers (Chrome, Brave, MS Edge, Opera, Vivaldi, ...): open `chrome://flags/#unsafely-treat-insecure-origin-as-secure` and add your non HTTPS address (for example: `http://192.168.1.35:3000`) then restart the app.
+
+- On firefox-based browsers: we are not aware of a way to whitelist a URL as easily. You can try clicking on the padlock at the left of the address bar then "Connection is not secure" -> "More information" -> "Permissions" and manually allow the microphone. Alternatively, setting `media.devices.insecure.enabled` to `True` might help.
+
 ## Difficulty Accessing Ollama from Open WebUI
 
 If you're encountering difficulties accessing Ollama from the Open WebUI interface, it could be due to Ollama being configured to listen on a restricted network interface by default. To enable access from the Open WebUI, you need to configure Ollama to listen on a broader range of network interfaces.
