--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -240,7 +240,7 @@ For Windows:
 git clone https://github.com/open-webui/open-webui.git
 cd open-webui
 
-cp .env.example .env
+copy .env.example .env
 
 npm install
 npm run build
