--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -97,18 +97,18 @@ Visit the [Docker documentation](https://docs.docker.com/storage/) to understand
   docker run -d -p 3000:8080 -e OPENAI_API_KEY=your_secret_key -v open-webui:/app/backend/data --name open-webui --restart always ghcr.io/open-webui/open-webui:main
   ```
 
-### Installing Open WebUI with Bundled Ollama Support
+### Installing Open WebUI With Bundled Ollama Support
 
 This installation method uses a single container image that bundles Open WebUI with Ollama, allowing for a streamlined setup via a single command. Choose the appropriate command based on your hardware setup:
 
-- **Bundled Installation for Nvidia GPU Support**:
+- **Bundled Ollama Installation with Nvidia GPU Support**:
   Utilize GPU resources by running the following command:
 
   ```bash
   docker run -d -p 3000:8080 --gpus=all -v ollama:/root/.ollama -v open-webui:/app/backend/data --name open-webui --restart always ghcr.io/open-webui/open-webui:ollama
   ```
 
-- **Bundled Installation for CPU Support Only**:
+- **Bundled Ollama Installation With CPU Support Only**:
   If you're not using a GPU, use this command instead:
 
   ```bash
@@ -212,7 +212,7 @@ volumes:
   open-webui:
 ```
 
-#### Install For Ollama + Nvidia GPU Support
+#### Install For Bundled Ollama + Nvidia GPU Support
 
 ```yml
 services:
@@ -239,7 +239,7 @@ volumes:
 ```
 
 
-#### Install For Ollama + CPU Only
+#### Install For Bundled Ollama + CPU Support Only
 
 ```yml
 services:
@@ -272,30 +272,66 @@ This will download any updates to the images and then start the containers in de
 ### Using the Dev Branch 🌙
 
 :::warning
-The `:dev` branch contains the latest unstable features and changes. Use it at your own risk as it may have bugs or incomplete features.
+The `:dev` branch contains the latest unstable features and changes. Use it at your own risk as it may have bugs or incomplete features. It is not recommended for production environments.
 :::
 
-If you want to try out the latest bleeding-edge features and are okay with occasional instability, you can use the `:dev` tag like this:
+If you want to try out the latest bleeding-edge features and are okay with occasional instability, you can use the `:dev` tag. Here's how to do it:
+
+#### Using Docker
+
+You can run the `:dev` branch using the following Docker command:
 
 ```bash
 docker run -d -p 3000:8080 -v open-webui:/app/backend/data --name open-webui --restart always ghcr.io/open-webui/open-webui:dev
 ```
 
+This command will start a new container named `open-webui` in detached mode, mapping port 3000 on the host machine to port 8080 in the container, and mounting a volume named `open-webui` to persist data.
+
+#### Using Docker Compose
+
+Alternatively, you can use Docker Compose to manage your container. Create a `docker-compose.yml` file with the following contents:
+
+```yml
+version: '3'
+
+services:
+  open-webui:
+    image: ghcr.io/open-webui/open-webui:dev
+    container_name: open-webui
+    environment:
+      - WEBUI_AUTH=True
+      - OLLAMA_BASE_URL=https://example.com
+    volumes:
+      - open-webui:/app/backend/data
+    ports:
+      - "3000:8080"
+    restart: always
+
+volumes:
+  open-webui:
+```
+
+Then, navigate to the directory where the `docker-compose.yml` file resides and run the following command to start the container in detached mode:
+
+```bash
+docker-compose up -d
+```
+
+This will start the container and make Open WebUI available at [http://localhost:3000](http://localhost:3000).
+
+#### Important Notes
+
+* Make sure to regularly update the container to get the latest changes from the `:dev` branch.
+* If you encounter any issues or bugs, please report them to our issue tracker so we can address them promptly.
+
 ## Updating
 
 Check out our full [updating guide](/getting-started/updating).
 
-If you want to update your local Docker installation to the latest version, you can use the following `docker-compose.yml` file and Watchtower:
+To keep your container up-to-date, you can use Watchtower, a tool that automatically updates running Docker containers. Create a `docker-compose.yml` file with the following contents:
 
 ```yml
 services:
-  watchtower:
-    image: containrrr/watchtower
-    container_name: watchtower
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    restart: always
-
   open-webui:
     image: ghcr.io/open-webui/open-webui:main
     container_name: open-webui
@@ -309,11 +345,18 @@ services:
       - "host.docker.internal:host-gateway"
     restart: always
 
+  watchtower:
+    image: containrrr/watchtower
+    container_name: watchtower
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: always
+
 volumes:
   open-webui:
 ```
 
-You can update your containers by running the following command:
+You can also update your container manually by running the following commands:
 
 ```bash
 docker-compose pull open-webui
@@ -322,13 +365,13 @@ docker-compose up -d
 
 This will update the `open-webui` container to the latest version. Note that you will need to update the `image` in the `docker-compose.yml` file to the latest tag.
 
-Docker run command:
+To update your container manually using Docker Run, you can use the following command:
 
 ```bash
 docker run --rm --volume /var/run/docker.sock:/var/run/docker.sock containrrr/watchtower --run-once open-webui
 ```
 
-In the last part of the command, replace `open-webui` with your container name if it is different.
+Replace `open-webui` with your specified container name if it is different.
 
 ## Manual Installation
 
