Convert all useage of whitelist to allowlist

--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -203,7 +203,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 ### 🎙️ Voice & Accessibility
 
 - 🗣️ **Voice Input Support**: Engage with your model through voice interactions; enjoy the convenience of talking to your model directly. Additionally, explore the option for sending voice input automatically after 3 seconds of silence for a streamlined experience.
-  - Microphone access requires manually setting up a secure connection over HTTPS to work, or [manually whitelisting your URL at your own risk](https://docs.openwebui.com/troubleshooting/microphone-access-and-other-permission-issues-with-non-https-connections).
+  - Microphone access requires manually setting up a secure connection over HTTPS to work, or [manually allowlisting your URL at your own risk](https://docs.openwebui.com/troubleshooting/microphone-access-and-other-permission-issues-with-non-https-connections).
 
 - 😊 **Emoji Call**: Toggle this feature on from the `Settings` > `Interface` menu, allowing LLMs to express emotions using emojis during voice calls for a more dynamic interaction.
   - Microphone access requires a secure connection over HTTPS for this feature to work.
@@ -274,7 +274,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 📣 **Configurable Notification Banners**: Admins can create customizable banners with persistence in config.json, featuring options for content, background color (`info`, `warning`, `error`, or `success`), and dismissibility. Banners are accessible only to logged-in users, ensuring the confidentiality of sensitive information.
 
-- 🛡️ **Model Whitelisting**: Enhance security and access control by allowing admins to whitelist models for users with the `user` role, ensuring that only authorized models can be accessed.
+- 🛡️ **Model Allowlisting**: Enhance security and access control by allowing admins to allowlist models for users with the `user` role, ensuring that only authorized models can be accessed.
 
 - 🔑 **Admin Control for Community Sharing**: Admins can enable or disable community sharing for all users via a toggle in the `Admin Panel` > `Settings` menu. This toggle allows admins to manage accessibility and privacy, ensuring a secure environment. Admins have the option of enabling or disabling the `Share on Community` button for all users, which allows them to control community engagement and collaboration.
 
