--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -74,7 +74,10 @@ When using Docker to install Open WebUI, make sure to include the `-v open-webui
        $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
        sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
      ```
-     Note: If you're using an Ubuntu derivative distro, such as Linux Mint, you might need to use `UBUNTU_CODENAME` instead of `VERSION_CODENAME`.
+
+:::note
+If you're using an Ubuntu derivative distro, such as Linux Mint, you might need to use `UBUNTU_CODENAME` instead of `VERSION_CODENAME`.
+:::
 
 3. **Install Docker Engine:**
 
@@ -194,7 +197,7 @@ For users who prefer to use Python's package manager `pip`, Open WebUI offers a 
 
 This method installs all necessary dependencies and starts Open WebUI, allowing for a simple and efficient setup. After installation, you can access Open WebUI at [http://localhost:8080](http://localhost:8080). Enjoy! 😄
 
-### Install from Open WebUI Github Repo
+### Install from Open WebUI GitHub Repo
 
 :::info
 Open WebUI consists of two primary components: the frontend and the backend (which serves as a reverse proxy, handling static frontend files, and additional features). Both need to be running concurrently for the development environment.
@@ -431,7 +434,5 @@ docker run --rm --volume /var/run/docker.sock:/var/run/docker.sock containrrr/wa
 In the last part of the command, replace `open-webui` with your container name if it is different.
 
 :::info
-
 After updating Open WebUI, you might need to refresh your browser cache to see the changes.
-
 :::
