--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -19,12 +19,7 @@ Here are some exciting tasks on our roadmap:
 - 💻 **Better Code Execution**: Enable sophisticated coding capabilities including file uploads, using external libraries, and executing multiple programming languages within the platform.
 - 🤖 **Code Interpreter Function**: Implement a versatile code interpreter to enhance development processes and support various coding needs directly within the platform.
 - 💬 **"Discussions" Feature - Multi-user Native Solution with AI Chat**: Foster engaging and productive discussions among users with a multi-user chat feature that incorporates AI to improve communication and problem-solving.
+- 📈 **Analytics Dashboard**: Monitor and analyze platform usage and performance with a comprehensive analytics dashboard that provides valuable insights and data visualization.
 
-### 🧑‍🔬 Research Tools
-
-- 🧪 **Research-Centric Features**: Empower researchers in the fields of LLM and HCI with a comprehensive web UI for conducting user studies. Stay tuned for ongoing feature enhancements (e.g., surveys, analytics, and participant tracking) to facilitate their research.
-- 📈 **User Study Tools**: Providing specialized tools, like heat maps and behavior tracking modules, to empower researchers in capturing and analyzing user behavior patterns with precision and accuracy.
-
-Read more about our [research offerings](/research)
 
 Join us in our mission to make Open WebUI even better and more accessible to all! 🙌
