--- a/docs/pipelines/index.mdx
+++ b/docs/pipelines/index.mdx
@@ -1,6 +1,7 @@
-import { TopBanners } from "@site/src/components/TopBanners";
-
-<TopBanners />
+---
+sidebar_position: 1
+title: "⚡ Pipelines"
+---
 
 <p align="center">
   <a href="#">
