--- a/docs/tutorial/plugin/tools/index.mdx
+++ b/docs/tutorial/plugin/tools/index.mdx
@@ -1,10 +1,14 @@
 ---
-sidebar_position: 5
+sidebar_position: 0
 title: "Tools"
 ---
 
 ## What are Tools?
 Tools are python scripts that are provided to an LLM at the time of the request. Tools allow LLMs to perform actions and receive additional context as a result. Generally speaking, your LLM of choice will need to support function calling for tools to be reliably utilized.
+
+Tools enable many use cases for chats, including web search, web scraping, and API interactions within the chat. 
+
+Many Tools are available to use on the [Community Website](https://openwebui.com/tools) and can easily be imported into your Open WebUI instance. 
 
 ## How can I use Tools?
 [Once installed](#how-to-install-tools), Tools can be used by assigning them to any LLM that supports function calling and then enabling that Tool. To assign a Tool to a model, you need to navigate to Workspace => Models. Here you can select the model for which you’d like to enable any Tools. 
